app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: firebase-spring-boot-crud
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: firebase-spring-boot-crud
    app.kubernetes.io/name: firebase-spring-boot-crud
    app.kubernetes.io/part-of: firebase-spring-boot-crud
    app.openshift.io/runtime: java
  name: firebase-spring-boot-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firebase-spring-boot-crud
  template:
    metadata:
      labels:
        app: firebase-spring-boot-crud
    spec:
      containers:
      - name: firebase-spring-boot-crud
        imagePullPolicy: Always
        image: quay.io/lightspeed001/firebase-spring-boot-crud:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
