app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: firebase-spring-boot-crud
  name: firebase-spring-boot-crud
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: firebase-spring-boot-crud
  sessionAffinity: None
  type: ClusterIP
