app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: firebase-spring-boot-crud
  name: firebase-spring-boot-crud
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: firebase-spring-boot-crud
    weight: 100
